geowave-analytics/src/main/java/mil/nga/giat/geowave/analytics/mapreduce/kde/parser/BasicMathParser.java
package mil.nga.giat.geowave.analytics.mapreduce.kde.parser;

// $ANTLR 3.3 BasicMath.g 2014-05-13 05:58:44

import java.util.ArrayList;
import java.util.List;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

@SuppressWarnings("all")
public class BasicMathParser extends
		Parser
{
	public static final String[] tokenNames = new String[] {
		"<invalid>",
		"<EOR>",
		"<DOWN>",
		"<UP>",
		"AND",
		"BOOLEAN",
		"DATETIME",
		"DIV",
		"EQUALS",
		"EscapeSequence",
		"FLOAT",
		"GT",
		"GTEQ",
		"HexDigit",
		"IDENT",
		"INTEGER",
		"LT",
		"LTEQ",
		"MINUS",
		"MOD",
		"MULT",
		"NEGATE",
		"NOT",
		"NOTEQUALS",
		"OR",
		"PARAM",
		"PLUS",
		"POW",
		"STRING",
		"UnicodeEscape",
		"WS",
		"'('",
		"')'",
		"','",
		"'['",
		"']'"
	};
	public static final int EOF = -1;
	public static final int T__31 = 31;
	public static final int T__32 = 32;
	public static final int T__33 = 33;
	public static final int T__34 = 34;
	public static final int T__35 = 35;
	public static final int AND = 4;
	public static final int BOOLEAN = 5;
	public static final int DATETIME = 6;
	public static final int DIV = 7;
	public static final int EQUALS = 8;
	public static final int EscapeSequence = 9;
	public static final int FLOAT = 10;
	public static final int GT = 11;
	public static final int GTEQ = 12;
	public static final int HexDigit = 13;
	public static final int IDENT = 14;
	public static final int INTEGER = 15;
	public static final int LT = 16;
	public static final int LTEQ = 17;
	public static final int MINUS = 18;
	public static final int MOD = 19;
	public static final int MULT = 20;
	public static final int NEGATE = 21;
	public static final int NOT = 22;
	public static final int NOTEQUALS = 23;
	public static final int OR = 24;
	public static final int PARAM = 25;
	public static final int PLUS = 26;
	public static final int POW = 27;
	public static final int STRING = 28;
	public static final int UnicodeEscape = 29;
	public static final int WS = 30;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators

	public BasicMathParser(
			final TokenStream input ) {
		this(
				input,
				new RecognizerSharedState());
	}

	public BasicMathParser(
			final TokenStream input,
			final RecognizerSharedState state ) {
		super(
				input,
				state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(
			final TreeAdaptor adaptor ) {
		this.adaptor = adaptor;
	}

	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}

	@Override
	public String[] getTokenNames() {
		return BasicMathParser.tokenNames;
	}

	@Override
	public String getGrammarFileName() {
		return "ECalc.g";
	}

	List<RecognitionException> exceptions = new ArrayList<RecognitionException>();

	@Override
	public void reportError(
			final RecognitionException e ) {
		exceptions.add(e);
	}

	public boolean hasError() {
		return !exceptions.isEmpty();
	}

	public String errorMessage() {
		return getErrorMessage(
				exceptions.get(0),
				tokenNames);
	}

	public String errorPosition() {
		return getErrorHeader(exceptions.get(0));
	}

	public static class expression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "expression"
	// ECalc.g:45:1: expression : logicalExpression EOF !;
	public final BasicMathParser.expression_return expression()
			throws RecognitionException {
		final BasicMathParser.expression_return retval = new BasicMathParser.expression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2 = null;
		ParserRuleReturnScope logicalExpression1 = null;

		final CommonTree EOF2_tree = null;

		try {
			// ECalc.g:46:2: ( logicalExpression EOF !)
			// ECalc.g:46:5: logicalExpression EOF !
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_logicalExpression_in_expression64);
				logicalExpression1 = logicalExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						logicalExpression1.getTree());

				EOF2 = (Token) match(
						input,
						EOF,
						FOLLOW_EOF_in_expression66);
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "expression"

	public static class logicalExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "logicalExpression"
	// ECalc.g:49:1: logicalExpression : booleanAndExpression ( OR ^
	// booleanAndExpression )* ;
	public final BasicMathParser.logicalExpression_return logicalExpression()
			throws RecognitionException {
		final BasicMathParser.logicalExpression_return retval = new BasicMathParser.logicalExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token OR4 = null;
		ParserRuleReturnScope booleanAndExpression3 = null;
		ParserRuleReturnScope booleanAndExpression5 = null;

		CommonTree OR4_tree = null;

		try {
			// ECalc.g:50:2: ( booleanAndExpression ( OR ^ booleanAndExpression
			// )* )
			// ECalc.g:50:4: booleanAndExpression ( OR ^ booleanAndExpression )*
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_booleanAndExpression_in_logicalExpression80);
				booleanAndExpression3 = booleanAndExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						booleanAndExpression3.getTree());

				// ECalc.g:50:25: ( OR ^ booleanAndExpression )*
				loop1: while (true) {
					int alt1 = 2;
					final int LA1_0 = input.LA(1);
					if ((LA1_0 == OR)) {
						alt1 = 1;
					}

					switch (alt1) {
						case 1:
						// ECalc.g:50:26: OR ^ booleanAndExpression
						{
							OR4 = (Token) match(
									input,
									OR,
									FOLLOW_OR_in_logicalExpression83);
							OR4_tree = (CommonTree) adaptor.create(OR4);
							root_0 = (CommonTree) adaptor.becomeRoot(
									OR4_tree,
									root_0);

							pushFollow(FOLLOW_booleanAndExpression_in_logicalExpression86);
							booleanAndExpression5 = booleanAndExpression();
							state._fsp--;

							adaptor.addChild(
									root_0,
									booleanAndExpression5.getTree());

						}
							break;

						default:
							break loop1;
					}
				}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "logicalExpression"

	public static class booleanAndExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "booleanAndExpression"
	// ECalc.g:55:1: booleanAndExpression : equalityExpression ( AND ^
	// equalityExpression )* ;
	public final BasicMathParser.booleanAndExpression_return booleanAndExpression()
			throws RecognitionException {
		final BasicMathParser.booleanAndExpression_return retval = new BasicMathParser.booleanAndExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token AND7 = null;
		ParserRuleReturnScope equalityExpression6 = null;
		ParserRuleReturnScope equalityExpression8 = null;

		CommonTree AND7_tree = null;

		try {
			// ECalc.g:56:2: ( equalityExpression ( AND ^ equalityExpression )*
			// )
			// ECalc.g:56:4: equalityExpression ( AND ^ equalityExpression )*
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_equalityExpression_in_booleanAndExpression116);
				equalityExpression6 = equalityExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						equalityExpression6.getTree());

				// ECalc.g:56:23: ( AND ^ equalityExpression )*
				loop2: while (true) {
					int alt2 = 2;
					final int LA2_0 = input.LA(1);
					if ((LA2_0 == AND)) {
						alt2 = 1;
					}

					switch (alt2) {
						case 1:
						// ECalc.g:56:24: AND ^ equalityExpression
						{
							AND7 = (Token) match(
									input,
									AND,
									FOLLOW_AND_in_booleanAndExpression119);
							AND7_tree = (CommonTree) adaptor.create(AND7);
							root_0 = (CommonTree) adaptor.becomeRoot(
									AND7_tree,
									root_0);

							pushFollow(FOLLOW_equalityExpression_in_booleanAndExpression122);
							equalityExpression8 = equalityExpression();
							state._fsp--;

							adaptor.addChild(
									root_0,
									equalityExpression8.getTree());

						}
							break;

						default:
							break loop2;
					}
				}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "booleanAndExpression"

	public static class equalityExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "equalityExpression"
	// ECalc.g:61:1: equalityExpression : relationalExpression ( ( EQUALS |
	// NOTEQUALS ) ^ relationalExpression )* ;
	public final BasicMathParser.equalityExpression_return equalityExpression()
			throws RecognitionException {
		final BasicMathParser.equalityExpression_return retval = new BasicMathParser.equalityExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set10 = null;
		ParserRuleReturnScope relationalExpression9 = null;
		ParserRuleReturnScope relationalExpression11 = null;

		final CommonTree set10_tree = null;

		try {
			// ECalc.g:62:2: ( relationalExpression ( ( EQUALS | NOTEQUALS ) ^
			// relationalExpression )* )
			// ECalc.g:62:4: relationalExpression ( ( EQUALS | NOTEQUALS ) ^
			// relationalExpression )*
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_relationalExpression_in_equalityExpression150);
				relationalExpression9 = relationalExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						relationalExpression9.getTree());

				// ECalc.g:62:25: ( ( EQUALS | NOTEQUALS ) ^
				// relationalExpression )*
				loop3: while (true) {
					int alt3 = 2;
					final int LA3_0 = input.LA(1);
					if (((LA3_0 == EQUALS) || (LA3_0 == NOTEQUALS))) {
						alt3 = 1;
					}

					switch (alt3) {
						case 1:
						// ECalc.g:62:26: ( EQUALS | NOTEQUALS ) ^
						// relationalExpression
						{
							set10 = input.LT(1);
							set10 = input.LT(1);
							if ((input.LA(1) == EQUALS) || (input.LA(1) == NOTEQUALS)) {
								input.consume();
								root_0 = (CommonTree) adaptor.becomeRoot(
										adaptor.create(set10),
										root_0);
								state.errorRecovery = false;
							}
							else {
								final MismatchedSetException mse = new MismatchedSetException(
										null,
										input);
								throw mse;
							}
							pushFollow(FOLLOW_relationalExpression_in_equalityExpression160);
							relationalExpression11 = relationalExpression();
							state._fsp--;

							adaptor.addChild(
									root_0,
									relationalExpression11.getTree());

						}
							break;

						default:
							break loop3;
					}
				}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "equalityExpression"

	public static class relationalExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "relationalExpression"
	// ECalc.g:70:1: relationalExpression : additiveExpression ( ( LT | LTEQ |
	// GT | GTEQ ) ^ additiveExpression )* ;
	public final BasicMathParser.relationalExpression_return relationalExpression()
			throws RecognitionException {
		final BasicMathParser.relationalExpression_return retval = new BasicMathParser.relationalExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set13 = null;
		ParserRuleReturnScope additiveExpression12 = null;
		ParserRuleReturnScope additiveExpression14 = null;

		final CommonTree set13_tree = null;

		try {
			// ECalc.g:71:2: ( additiveExpression ( ( LT | LTEQ | GT | GTEQ ) ^
			// additiveExpression )* )
			// ECalc.g:71:4: additiveExpression ( ( LT | LTEQ | GT | GTEQ ) ^
			// additiveExpression )*
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_additiveExpression_in_relationalExpression200);
				additiveExpression12 = additiveExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						additiveExpression12.getTree());

				// ECalc.g:71:23: ( ( LT | LTEQ | GT | GTEQ ) ^
				// additiveExpression )*
				loop4: while (true) {
					int alt4 = 2;
					final int LA4_0 = input.LA(1);
					if ((((LA4_0 >= GT) && (LA4_0 <= GTEQ)) || ((LA4_0 >= LT) && (LA4_0 <= LTEQ)))) {
						alt4 = 1;
					}

					switch (alt4) {
						case 1:
						// ECalc.g:71:25: ( LT | LTEQ | GT | GTEQ ) ^
						// additiveExpression
						{
							set13 = input.LT(1);
							set13 = input.LT(1);
							if (((input.LA(1) >= GT) && (input.LA(1) <= GTEQ)) || ((input.LA(1) >= LT) && (input.LA(1) <= LTEQ))) {
								input.consume();
								root_0 = (CommonTree) adaptor.becomeRoot(
										adaptor.create(set13),
										root_0);
								state.errorRecovery = false;
							}
							else {
								final MismatchedSetException mse = new MismatchedSetException(
										null,
										input);
								throw mse;
							}
							pushFollow(FOLLOW_additiveExpression_in_relationalExpression215);
							additiveExpression14 = additiveExpression();
							state._fsp--;

							adaptor.addChild(
									root_0,
									additiveExpression14.getTree());

						}
							break;

						default:
							break loop4;
					}
				}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "relationalExpression"

	public static class additiveExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "additiveExpression"
	// ECalc.g:79:1: additiveExpression : multiplicativeExpression ( ( PLUS |
	// MINUS ) ^ multiplicativeExpression )* ;
	public final BasicMathParser.additiveExpression_return additiveExpression()
			throws RecognitionException {
		final BasicMathParser.additiveExpression_return retval = new BasicMathParser.additiveExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set16 = null;
		ParserRuleReturnScope multiplicativeExpression15 = null;
		ParserRuleReturnScope multiplicativeExpression17 = null;

		final CommonTree set16_tree = null;

		try {
			// ECalc.g:80:2: ( multiplicativeExpression ( ( PLUS | MINUS ) ^
			// multiplicativeExpression )* )
			// ECalc.g:80:4: multiplicativeExpression ( ( PLUS | MINUS ) ^
			// multiplicativeExpression )*
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_multiplicativeExpression_in_additiveExpression258);
				multiplicativeExpression15 = multiplicativeExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						multiplicativeExpression15.getTree());

				// ECalc.g:80:29: ( ( PLUS | MINUS ) ^ multiplicativeExpression
				// )*
				loop5: while (true) {
					int alt5 = 2;
					final int LA5_0 = input.LA(1);
					if (((LA5_0 == MINUS) || (LA5_0 == PLUS))) {
						alt5 = 1;
					}

					switch (alt5) {
						case 1:
						// ECalc.g:80:31: ( PLUS | MINUS ) ^
						// multiplicativeExpression
						{
							set16 = input.LT(1);
							set16 = input.LT(1);
							if ((input.LA(1) == MINUS) || (input.LA(1) == PLUS)) {
								input.consume();
								root_0 = (CommonTree) adaptor.becomeRoot(
										adaptor.create(set16),
										root_0);
								state.errorRecovery = false;
							}
							else {
								final MismatchedSetException mse = new MismatchedSetException(
										null,
										input);
								throw mse;
							}
							pushFollow(FOLLOW_multiplicativeExpression_in_additiveExpression269);
							multiplicativeExpression17 = multiplicativeExpression();
							state._fsp--;

							adaptor.addChild(
									root_0,
									multiplicativeExpression17.getTree());

						}
							break;

						default:
							break loop5;
					}
				}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "additiveExpression"

	public static class multiplicativeExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "multiplicativeExpression"
	// ECalc.g:86:1: multiplicativeExpression : powerExpression ( ( MULT | DIV |
	// MOD ) ^ powerExpression )* ;
	public final BasicMathParser.multiplicativeExpression_return multiplicativeExpression()
			throws RecognitionException {
		final BasicMathParser.multiplicativeExpression_return retval = new BasicMathParser.multiplicativeExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set19 = null;
		ParserRuleReturnScope powerExpression18 = null;
		ParserRuleReturnScope powerExpression20 = null;

		final CommonTree set19_tree = null;

		try {
			// ECalc.g:87:2: ( powerExpression ( ( MULT | DIV | MOD ) ^
			// powerExpression )* )
			// ECalc.g:87:4: powerExpression ( ( MULT | DIV | MOD ) ^
			// powerExpression )*
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_powerExpression_in_multiplicativeExpression299);
				powerExpression18 = powerExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						powerExpression18.getTree());

				// ECalc.g:87:20: ( ( MULT | DIV | MOD ) ^ powerExpression )*
				loop6: while (true) {
					int alt6 = 2;
					final int LA6_0 = input.LA(1);
					if (((LA6_0 == DIV) || ((LA6_0 >= MOD) && (LA6_0 <= MULT)))) {
						alt6 = 1;
					}

					switch (alt6) {
						case 1:
						// ECalc.g:87:22: ( MULT | DIV | MOD ) ^ powerExpression
						{
							set19 = input.LT(1);
							set19 = input.LT(1);
							if ((input.LA(1) == DIV) || ((input.LA(1) >= MOD) && (input.LA(1) <= MULT))) {
								input.consume();
								root_0 = (CommonTree) adaptor.becomeRoot(
										adaptor.create(set19),
										root_0);
								state.errorRecovery = false;
							}
							else {
								final MismatchedSetException mse = new MismatchedSetException(
										null,
										input);
								throw mse;
							}
							pushFollow(FOLLOW_powerExpression_in_multiplicativeExpression312);
							powerExpression20 = powerExpression();
							state._fsp--;

							adaptor.addChild(
									root_0,
									powerExpression20.getTree());

						}
							break;

						default:
							break loop6;
					}
				}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "multiplicativeExpression"

	public static class powerExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "powerExpression"
	// ECalc.g:94:1: powerExpression : unaryExpression ( POW ^ unaryExpression
	// )* ;
	public final BasicMathParser.powerExpression_return powerExpression()
			throws RecognitionException {
		final BasicMathParser.powerExpression_return retval = new BasicMathParser.powerExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token POW22 = null;
		ParserRuleReturnScope unaryExpression21 = null;
		ParserRuleReturnScope unaryExpression23 = null;

		CommonTree POW22_tree = null;

		try {
			// ECalc.g:95:2: ( unaryExpression ( POW ^ unaryExpression )* )
			// ECalc.g:95:4: unaryExpression ( POW ^ unaryExpression )*
			{
				root_0 = (CommonTree) adaptor.nil();

				pushFollow(FOLLOW_unaryExpression_in_powerExpression350);
				unaryExpression21 = unaryExpression();
				state._fsp--;

				adaptor.addChild(
						root_0,
						unaryExpression21.getTree());

				// ECalc.g:95:20: ( POW ^ unaryExpression )*
				loop7: while (true) {
					int alt7 = 2;
					final int LA7_0 = input.LA(1);
					if ((LA7_0 == POW)) {
						alt7 = 1;
					}

					switch (alt7) {
						case 1:
						// ECalc.g:95:22: POW ^ unaryExpression
						{
							POW22 = (Token) match(
									input,
									POW,
									FOLLOW_POW_in_powerExpression354);
							POW22_tree = (CommonTree) adaptor.create(POW22);
							root_0 = (CommonTree) adaptor.becomeRoot(
									POW22_tree,
									root_0);

							pushFollow(FOLLOW_unaryExpression_in_powerExpression357);
							unaryExpression23 = unaryExpression();
							state._fsp--;

							adaptor.addChild(
									root_0,
									unaryExpression23.getTree());

						}
							break;

						default:
							break loop7;
					}
				}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);

		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(
					input,
					re);
			retval.tree = (CommonTree) adaptor.errorNode(
					input,
					retval.start,
					input.LT(-1),
					re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}

	// $ANTLR end "powerExpression"

	public static class unaryExpression_return extends
			ParserRuleReturnScope
	{
		CommonTree tree;

		@Override
		public CommonTree getTree() {
			return tree;
		}
	};

	// $ANTLR start "unaryExpression"
	// ECalc.g:100:1: unaryExpression : ( primaryExpression | NOT ^
	// primaryExpression | MINUS primaryExpression -> ^( NEGATE
	// primaryExpression ) );
	public final BasicMathParser.unaryExpression_return unaryExpression()
			throws RecognitionException {
		final BasicMathParser.unaryExpression_return retval = new BasicMathParser.unaryExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token NOT25 = null;
		Token MINUS27 = null;
		ParserRuleReturnScope primaryExpression24 = null;
		ParserRuleReturnScope primaryExpression26 = null;
		ParserRuleReturnScope primaryExpression28 = null;

		CommonTree NOT25_tree = null;
		final CommonTree MINUS27_tree = null;
		final RewriteRuleTokenStream stream_MINUS = new RewriteRuleTokenStream(
				adaptor,
				"token MINUS");
		final RewriteRuleSubtreeStream stream_primaryExpression = new RewriteRuleSubtreeStream(
				adaptor,
				"rule primaryExpression");

		try {
			// ECalc.g:101:2: ( primaryExpression | NOT ^ primaryExpression |
			// MINUS primaryExpression -> ^( NEGATE primaryExpression ) )
			int alt8 = 3;
			switch (input.LA(1)) {
				case BOOLEAN:
				case DATETIME:
				case FLOAT:
				case IDENT:
				case INTEGER:
				case STRING:
				case 31:
				case 34: {
					alt8 = 1;
				}
					break;
				case NOT: {
					alt8 = 2;
				}
					break;
				case MINUS: {
					alt8 = 3;
				}
					break;
				default:
					final NoViableAltException nvae = new NoViableAltException(
							"",
							8,
							0,
							input);
					throw nvae;
			}
			switch (alt8) {
				case 1:
				// ECalc.g:101:4: primaryExpression
				{
					root_0 = (CommonTree) adaptor.nil();

					pushFollow(FOLLOW_primaryExpression_in_unaryExpression380);
					primaryExpression24 = primaryExpression();
					state._fsp--;

					adaptor.addChild(
							root_0,
							primaryExpression24.getTree());

				}
					break;
				case 2:
				// ECalc.g:102:8: NOT ^ primaryExpression
				{
					root_0 = (CommonTree) adaptor.nil();

					NOT25 = (Token) match(
							input,
							NOT,
							FOLLOW_NOT_in_unaryExpression389);
					NOT25_tree = (CommonTree) adaptor.create(NOT25);
					root_0 = (CommonTree) adaptor.becomeRoot(
							NOT25_tree,
							root_0);

					pushFollow(FOLLOW_primaryExpression_in_unaryExpression392);
					primaryExpression26 = primaryExpression();
					state._fsp--;

					adaptor.addChild(
							root_0,
							primaryExpression26.getTree());

				}
					break;
				case 3:
				// ECalc.g:103:8: MINUS primaryExpression
				{
					MINUS27 = (Token) match(
							input,
							MINUS,
							FOLLOW_MINUS_in_unaryExpression401);
					stream_MINUS.add(MINUS27);

					pushFollow(FOLLOW_primaryExpression_in_unaryExpression403);
					primaryExpression28 = primaryExpression();
					state._fsp--;

					stream_primaryExpression.add(primaryExpression28.getTree());
					// AST REWRITE
					// elements: primaryExpression
					// token labels:
					// rule labels: retval
					// token list labels:
					// rule list labels:
					// wildcard labels:
					retval.tree = root_0;
					final RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(
							adaptor,
							"rule retval",
							retval != null ? retval.getTree() : null);

					root_0 = (CommonTree) adaptor.nil();
					// 103:32: -> ^( NEGATE primaryExpression )
					{
						// ECalc.g:103:35: ^( NEGATE primaryExpression )
						{
							CommonTree root_1 = (CommonTree) adaptor.nil();
							root_1 = (CommonTree) adaptor.becomeRoot(
									adaptor.create(
											NEGATE,
											"NEGATE"),
									root_1);
							adaptor.addChild(
									root_1,
									stream_primaryExpression.nextTree());
							adaptor.addChild(
									root_0,
									root_1);
						}

					}

					retval.tree = root_0;

				}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(
					retval.tree,
					retval.start,
					retval.stop);
